force-app/main/default/objects/Coface_Company__c/Coface_Company__c.object-meta.xml
<CustomObject>
    <label>Coface Company</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Coface Company</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>