force-app/main/default/objects/Coface_Company__c/fields/Company_Json__c.field-meta.xml
<CustomField>
    <fullName>Company_Json__c</fullName>
    <label>Company Json</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>