force-app/main/default/objects/Coface_Company__c/fields/Icon_Number__c.field-meta.xml
<CustomField>
    <fullName>Icon_Number__c</fullName>
    <externalId>true</externalId>
    <label>Icon Number</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>