force-app/main/default/objects/Coface_Company__c/fields/International_Name__c.field-meta.xml
<CustomField>
    <fullName>International_Name__c</fullName>
    <label>International Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>