force-app/main/default/objects/Coface_Company__c/fields/Last_Major_Update__c.field-meta.xml
<CustomField>
    <fullName>Last_Major_Update__c</fullName>
    <label>Last Major Update</label>
    <length>255</length>
    <type>Text</type>
</CustomField>