force-app/main/default/objects/Coface_Company__c/fields/Registration_Date__c.field-meta.xml
<CustomField>
    <fullName>Registration_Date__c</fullName>
    <label>Registration Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>