force-app/main/default/objects/Coface_Company__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>International_Name__c</columns>
    <columns>Icon_Number__c</columns>
    <columns>Last_Major_Update__c</columns>
    <columns>Country__c</columns>
    <columns>City__c</columns>
    <columns>Address__c</columns>
    <columns>Postal_Code__c</columns>
    <columns>Legal_Form__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>